--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
+    <title>ScrollOnyx</title>
+    <meta name="twitter:title" content="ScrollOnyx">
+    <meta property="og:title" content="ScrollOnyx">
+
+    <meta name="description"
+        content="ScrollOnyx Finance is an algorithmic stable coin protocol pegged 1:1 to Scroll on Scroll Chain. Much like Basis Cash our protocol uses three tokens (SNYX, SSHRE, SBOND) to incentivize a stable 1:1 peg to USDC. 
+The protocol's underlying mechanism dynamically adjusts SNYX supply, pushing its price up or down relative to the price USDC." />
+    <meta name="twitter:description"
+        content="ScrollOnyx Finance is an algorithmic stable coin protocol pegged 1:1 to Scroll on Scroll Chain. Much like Basis Cash our protocol uses three tokens (SNYX, SSHRE, SBOND) to incentivize a stable 1:1 peg to USDC. 
+The protocol's underlying mechanism dynamically adjusts SNYX supply, pushing its price up or down relative to the price USDC.">
+    <meta property="og:description"
+        content="ScrollOnyx Finance is an algorithmic stable coin protocol pegged 1:1 to Scroll on Scroll Chain. Much like Basis Cash our protocol uses three tokens (SNYX, SSHRE, SBOND) to incentivize a stable 1:1 peg to USDC. 
+The protocol's underlying mechanism dynamically adjusts SNYX supply, pushing its price up or down relative to the price USDC.">
+
+    <meta name="twitter:site" content="@scrollonyx">
+    <meta name="twitter:image" content="https://scrollonyx.online/card.png">
+    <meta property="og:url" content="https://scrollonyx.online">
+    <meta property="og:image" content="https://scrollonyx.online/card.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:type" content="website">
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +45,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
